<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">holcost</string>
    <string name="holcost_close">Close holcost</string>
    <string name="holcost_delete">Delete holcost</string>
    <string name="dude_create">Add dude</string>
    <string name="cost_delete">Delete cost</string>
    <string name="dude_delete">Delete dude</string>
    <string name="create_cost">Add new cost</string>
    <string name="list_cost">List costs</string>
    <string name="has_debt">{0} has a debt of {1}</string>
    <string name="has_nodebt">{0} has to receive {1}</string>
    <string name="create_holcost_title">Create new holcost</string>
    <string name="holcost_name">Name</string>
    <string name="holcost_save">Save</string>
    <string name="holcost_list">List existing holcosts</string>
    <string name="list_holcost_title">or select an existing one</string>
    <string name="create_dude_title">Add new dude</string>
    <string name="dude_name">Name</string>
    <string name="dude_save">Save</string>
    <string name="create_cost_title">Register new cost</string>
    <string name="modify_cost_title">Modify cost</string>
    <string name="cost_name">Name</string>
    <string name="cost_amount">Amount</string>
    <string name="cost_payer">Payer</string>
    <string name="cost_participants">Participants</string>
    <string name="cost_save">Save</string>
    <string name="list_cost_title">Costs</string>
    <string name="payed_costs">Paid costs</string>
    <string name="view_payed_costs">View paid costs</string>
    <string name="participant_costs">Participant costs</string>
    <string name="view_participant_costs">View participant costs</string>
    <string name="debt_spent">Spent:</string>
    <string name="debt_payed">Paid:</string>
    <string name="alert_delete_holcost">Are you sure you want to delete this holcost?</string>
    <string name="alert_delete_dude">Are you sure you want to delete this dude?</string>
    <string name="alert_delete_cost">Are you sure you want to delete this cost?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_amount_required">Amount is required</string>
    <string name="error_participant_required">One participant is required</string>
    <string name="error_dude_duplicated">Dude duplicated</string>
    <string name="error_dude_have_payed_costs">Dude has paid costs</string>
    <string name="create_holcost_insert_name">Insert the name of new holcost</string>
    <string name="create_dude_insert_name">Insert the name of dude</string>
    <string name="create_cost_insert_data">Insert cost data</string>
    <string name="create_cost_select_payer">Select who paid</string>
    <string name="create_cost_select_participants">Select who participates</string>

</resources>