<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/createHolcostTitle"
        style="@style/TitleText"
        android:text="@string/create_holcost_title" />

    <EditText
        android:id="@+id/holcostName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/holcost_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/createHolcostButton"
        style="@style/ButtonText"
        android:background="@drawable/button"
        android:text="@string/holcost_save" />

    <Button
        android:id="@+id/listHolcostButton"
        style="@style/ButtonText"
        android:background="@drawable/button"
        android:text="@string/holcost_list"
        android:visibility="gone" />

</LinearLayout>