<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/createDudeTitle"
        style="@style/TitleText"
        android:text="@string/create_dude_title" />

    <EditText
        android:id="@+id/dudeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dude_name"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/createDudeButton"
        style="@style/ButtonText"
        android:background="@drawable/button"
        android:text="@string/dude_save" />

</LinearLayout>