<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_dude_insert_name" />

    <EditText
        android:id="@+id/dudeName"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dude_name"
        android:inputType="textCapSentences"
        android:maxLength="255" />

    <Button
        android:id="@+id/createDudeButton"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_content_save"
        android:text="@string/dude_save" />

</LinearLayout>