<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        style="@style/activity_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_cost_insert_data" />

            <EditText
                android:id="@+id/costName"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost_name"
                android:inputType="text"
                android:maxLength="255" />

            <EditText
                android:id="@+id/costAmount"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cost_amount"
                android:inputType="numberDecimal"
                android:maxLength="15" />

            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_cost_select_payer" />

            <Spinner
                android:id="@+id/costPayer"
                style="@style/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />

            <TextView
                style="@style/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_cost_select_participants" />

            <LinearLayout
                android:id="@+id/costParticipantsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/activity_background_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/createCostButton"
            style="@style/button_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_content_save"
            android:text="@string/cost_save" />
    </LinearLayout>

</LinearLayout>