<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/activity_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listDudes"
            style="@style/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/firstStepMessage"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:visibility="gone"
            android:layout_gravity="center"
            android:text="@string/first_step" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_background_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/createDude"
            style="@style/button_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_social_add_person"
            android:text="@string/dude_create"
            android:visibility="gone" />

        <Button
            android:id="@+id/createCost"
            style="@style/button_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_content_edit"
            android:text="@string/create_cost"
            android:visibility="gone" />

        <Button
            android:id="@+id/listCostButton"
            style="@style/button_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_content_copy"
            android:text="@string/list_cost"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>